--- a/libs/css/main.css
+++ b/libs/css/main.css
@@ -1,6 +1,32 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url(./fonts.css);
+/* CUSTOMS PROPS */
+:root{
+    --dark:#111517;
+    --grey:#848484;
+    --bg-color:#fafafa;
+    --nunitoSans:"NunitoSans";
 }
 /* GLOBAL CSS*/
+
+*,
+*::before
+*::after{
+    margin: 0;
+    padding: 0;
+}
+a{
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+}
+/* CONTAINER */
+.container{
+    max-width: 1280px;
+    width: 100%;
+    margin: auto;
+    padding: 0 15px;
+}
+body{
+    background-color: var(--bg-color);
+}
